--- a/index.html
+++ b/index.html
@@ -23,3 +23,13 @@ layout: default
 
 </div>
 =======
+<!DOCTYPE html>
+<html>
+  <head> 
+    <title>The Tricf </title>
+    </head>
+    <body>
+      <h1> The Tri-CF Mafia </h1>
+    </body> 
+</html>
+    
