--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
 <head>
 <title> "The Tricf Mafia </title>
+  <link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <body>
   <h1> The Tri-CF Mafia </h1>
