--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h2> The Tri-CF Mafia </h2>
+  <p> The Tri-CF Mafia is fullblown AIDS no questions asked. </p>
 </body>
 </html>
 
